initial commit for validations

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@
 /ZimoziSolutions/ZimoziSolutions.Infrastructure/bin
 /ZimoziSolutions/ZimoziSolutions.Infrastructure.Interfaces/bin
 /ZimoziSolutions/ZimoziSolutions.Infrastructure.Interfaces/obj
+/ZimoziSolutions/ZimoziSolutions.Validations/bin
+/ZimoziSolutions/ZimoziSolutions.Validations/obj
