--- a/ZimoziSolutions/ZimoziSolutions/appsettings.json
+++ b/ZimoziSolutions/ZimoziSolutions/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Appsetting": {
+    "SqlDbConnection": "Server=localhost;Database=zimozi_dev;User Id=sa;password=Laurence2357840;Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true;MultipleActiveResultSets=true;"
+  },
   "AllowedHosts": "*"
 }
