--- a/ZimoziSolutions/ZimoziSolutions.Infrastructure.Interfaces/ZimoziSolutions.Infrastructure.Interfaces.csproj
+++ b/ZimoziSolutions/ZimoziSolutions.Infrastructure.Interfaces/ZimoziSolutions.Infrastructure.Interfaces.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ZimoziSolutions.Domain\ZimoziSolutions.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
