--- a/ZimoziSolutions/ZimoziSolutions/appsettings.json
+++ b/ZimoziSolutions/ZimoziSolutions/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "Appsetting": {
-    "SqlDbConnection": "Server=localhost;Database=zimozi_dev;User Id=sa;password=Laurence2357840;Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true;MultipleActiveResultSets=true;"
+    "SqlDbConnection": "Server=localhost;Database=zimozi_dev;User Id=sa;password=Laurence2357840;Trusted_Connection=true;Encrypt=false;TrustServerCertificate=true;"
   },
   "AllowedHosts": "*"
 }
