--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@
 /ZimoziSolutions/ZimoziSolutions.Infrastructure.Interfaces/obj
 /ZimoziSolutions/ZimoziSolutions.Validations/bin
 /ZimoziSolutions/ZimoziSolutions.Validations/obj
+/ZimoziSolutions/ZimoziSolutions.Tests/bin
+/ZimoziSolutions/ZimoziSolutions.Tests/obj
